# Audio-Driven-Avatar-Engine

./: .gitignore  README.md  main.py  pyproject.toml  run_extraction.py
src/: dataset.py  extraction.py  model.py
